# outetts

./: .gitignore  README.md  pubspec.yaml
demo/: .gitignore
examples/: README.md
examples/outetts_app/: README.md  pubspec.yaml
examples/outetts_app/android/app/: build.gradle.kts
examples/outetts_app/android/app/src/main/: AndroidManifest.xml
examples/outetts_app/android/app/src/main/kotlin/general_developer/outetts/outetts_app/: MainActivity.kt
examples/outetts_app/dev/: generate_schemes.dart
examples/outetts_app/ios/Runner/: Info.plist
examples/outetts_app/ios/Runner.xcodeproj/: project.pbxproj
examples/outetts_app/lib/: main.dart
examples/outetts_app/lib/core/: core.dart
examples/outetts_app/lib/packagex/: packagex.dart
examples/outetts_app/lib/page/: page.dart
examples/outetts_app/lib/page/outetts/: outetts.dart
examples/outetts_app/lib/scheme/scheme/: application_outetts_database.dart  scheme.dart
examples/outetts_app/linux/: CMakeLists.txt
examples/outetts_app/linux/flutter/: generated_plugins.cmake
examples/outetts_app/linux/packagex/: .gitignore
examples/outetts_app/linux/packagex/DEBIAN/: control  postinst
examples/outetts_app/linux/packagex/usr/share/applications/: outetts_app.desktop
examples/outetts_app/linux/runner/: my_application.cc
examples/outetts_app/macos/Runner.xcodeproj/: project.pbxproj
examples/outetts_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
examples/outetts_app/macos/Runner/Configs/: AppInfo.xcconfig
examples/outetts_app/test/: widget_test.dart
examples/outetts_app/web/: index.html  manifest.json
examples/outetts_app/windows/: CMakeLists.txt
examples/outetts_app/windows/flutter/: generated_plugins.cmake
examples/outetts_app/windows/runner/: Runner.rc  main.cpp
native_lib/: .gitignore  CMakeLists.txt
native_lib/lib/outetts/include/: outetts.h
native_lib/lib/outetts/lib/: outetts.cpp
package/outetts/: CHANGELOG.md  pubspec.yaml  test  test-example
package/outetts/example/: example.dart  test.dart
package/outetts/lib/: base.dart  io.dart  none.dart
package/outetts/lib/ffi/: bindings.dart
package/outetts/lib/raw/src/params/: context_params.dart  model_params.dart  sampling_params.dart
package/outetts_dart/: CHANGELOG.md  pubspec.yaml  pubspec_overrides.yaml
package/outetts_dart/example/: example.dart
package/outetts_dart/lib/: outetts_dart.dart
package/outetts_flutter/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
package/outetts_flutter/android/: build.gradle  settings.gradle
package/outetts_flutter/android/src/main/: AndroidManifest.xml
package/outetts_flutter/example/: README.md
package/outetts_flutter/ios/: outetts_flutter.podspec
package/outetts_flutter/lib/: outetts_flutter.dart
package/outetts_flutter/linux/: CMakeLists.txt
package/outetts_flutter/macos/: outetts_flutter.podspec
package/outetts_flutter/windows/: CMakeLists.txt
test/: outetts_test.dart
